# stacking-dream

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  stacking-dream.slnx  stacking-dream.vcxproj  stacking-dream.vcxproj.filters
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/src/: stb.c
res/shaders/: default.frag  default.vert
src/: main.c  state.h
src/ecs/: ecs.c  ecs.h
src/entity/: camera.c  camera.h  player.c  player.h
src/gfx/: buffer.c  buffer.h  buffer_object.c  buffer_object.h  gfx.h  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h  vertex_array.c  vertex_array.h  vertex_attribute_object.c  vertex_attribute_object.h  window.c  window.h
src/util/: math.h  time.h  types.h  util.h
src/world/: mesh.c  mesh.h  world.h
